--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3940,6 +3940,7 @@ section.form .container {
 }
 #header3-kb .mbr-section-subtitle {
   font-size: 8px;
+  color: #545050;
 }
 #header3-kc .mbr-section-title,
 #header3-kc .mbr-section-subtitle {
@@ -3959,64 +3960,191 @@ section.form .container {
   font-family: 'Slabo 27px', serif;
   font-size: 12px;
 }
-#undefined .hide-buttons .nav-btn {
+#menu-kl .hide-buttons .nav-btn {
   display: none !important;
 }
-#undefined .navbar-caption {
+#menu-kl .navbar-caption {
   color: #ffffff;
 }
-#undefined .navbar-toggler {
+#menu-kl .navbar-toggler {
   color: #000000;
 }
-#undefined .close-icon::before,
-#undefined .close-icon::after {
+#menu-kl .close-icon::before,
+#menu-kl .close-icon::after {
   background-color: #000000;
 }
-#undefined .link,
-#undefined .dropdown-item {
+#menu-kl .link,
+#menu-kl .dropdown-item {
   color: #000000;
 }
-#undefined .link {
+#menu-kl .link {
   font-size: 0.75rem;
 }
-#undefined .dropdown-item,
-#undefined .nav-dropdown-sm .link {
+#menu-kl .dropdown-item,
+#menu-kl .nav-dropdown-sm .link {
   font-size: 0.812rem;
 }
-#undefined .link:hover,
-#undefined .dropdown-item:hover,
-#undefined .link:focus,
-#undefined .dropdown-item:focus {
+#menu-kl .link:hover,
+#menu-kl .dropdown-item:hover,
+#menu-kl .link:focus,
+#menu-kl .dropdown-item:focus {
   color: #000000;
 }
-#undefined .link[aria-expanded="true"],
-#undefined .dropdown-menu {
+#menu-kl .link[aria-expanded="true"],
+#menu-kl .dropdown-menu {
   background: #e6e6e6;
 }
-#undefined .nav-dropdown-sm .link:focus,
-#undefined .nav-dropdown-sm .link:hover,
-#undefined .nav-dropdown-sm .dropdown-item:focus,
-#undefined .nav-dropdown-sm .dropdown-item:hover {
+#menu-kl .nav-dropdown-sm .link:focus,
+#menu-kl .nav-dropdown-sm .link:hover,
+#menu-kl .nav-dropdown-sm .dropdown-item:focus,
+#menu-kl .nav-dropdown-sm .dropdown-item:hover {
   background: #f7f7f7!important;
 }
-#undefined .navbar,
-#undefined .nav-dropdown-sm,
-#undefined .nav-dropdown-sm .link[aria-expanded="true"],
-#undefined .nav-dropdown-sm .dropdown-menu {
+#menu-kl .navbar,
+#menu-kl .nav-dropdown-sm,
+#menu-kl .nav-dropdown-sm .link[aria-expanded="true"],
+#menu-kl .nav-dropdown-sm .dropdown-menu {
   background: #ffffff;
 }
-#undefined .bg-color.transparent .link {
+#menu-kl .bg-color.transparent .link {
   color: #000000;
   transition: none;
 }
-#undefined .bg-color.transparent.opened .link {
+#menu-kl .bg-color.transparent.opened .link {
   transition: color 0.2s ease-in-out;
 }
-#undefined .bg-color.transparent.opened .link:hover,
-#undefined .bg-color.transparent.opened .link:focus {
+#menu-kl .bg-color.transparent.opened .link:hover,
+#menu-kl .bg-color.transparent.opened .link:focus {
   color: #000000;
 }
-#undefined .link[aria-expanded="true"],
-#undefined .dropdown-item[aria-expanded="true"] {
+#menu-kl .link[aria-expanded="true"],
+#menu-kl .dropdown-item[aria-expanded="true"] {
   color: #efefef!important;
+}
+
+
+
+
+
+
+
+
+#header3-km .mbr-section-title,
+#header3-km .mbr-section-subtitle {
+  text-align: center;
+}
+#content1-ko P {
+  text-align: center;
+  font-family: 'Droid Serif', serif;
+  color: #28262b;
+  font-size: 15px;
+}
+#content1-ko DIV {
+  color: #d14841;
+}
+#footer1-kp P {
+  color: #282828;
+  text-align: center;
+  font-family: 'Slabo 27px', serif;
+  font-size: 12px;
+}
+#features3-kq P {
+  color: #d14841;
+  font-size: 15px;
+  text-align: center;
+  font-family: 'Droid Serif', serif;
+}
+#features3-kq H4 {
+  font-family: 'PT Serif', serif;
+  font-size: 18px;
+}
+#features3-kr P {
+  color: #d14841;
+  font-size: 14px;
+  font-family: 'Droid Serif', serif;
+}
+#features3-kr H4 {
+  font-family: 'PT Serif', serif;
+  font-size: 18px;
+}
+#menu-ks .hide-buttons .nav-btn {
+  display: none !important;
+}
+#menu-ks .navbar-caption {
+  color: #ffffff;
+}
+#menu-ks .navbar-toggler {
+  color: #000000;
+}
+#menu-ks .close-icon::before,
+#menu-ks .close-icon::after {
+  background-color: #000000;
+}
+#menu-ks .link,
+#menu-ks .dropdown-item {
+  color: #000000;
+}
+#menu-ks .link {
+  font-size: 0.75rem;
+}
+#menu-ks .dropdown-item,
+#menu-ks .nav-dropdown-sm .link {
+  font-size: 0.812rem;
+}
+#menu-ks .link:hover,
+#menu-ks .dropdown-item:hover,
+#menu-ks .link:focus,
+#menu-ks .dropdown-item:focus {
+  color: #000000;
+}
+#menu-ks .link[aria-expanded="true"],
+#menu-ks .dropdown-menu {
+  background: #e6e6e6;
+}
+#menu-ks .nav-dropdown-sm .link:focus,
+#menu-ks .nav-dropdown-sm .link:hover,
+#menu-ks .nav-dropdown-sm .dropdown-item:focus,
+#menu-ks .nav-dropdown-sm .dropdown-item:hover {
+  background: #f7f7f7!important;
+}
+#menu-ks .navbar,
+#menu-ks .nav-dropdown-sm,
+#menu-ks .nav-dropdown-sm .link[aria-expanded="true"],
+#menu-ks .nav-dropdown-sm .dropdown-menu {
+  background: #ffffff;
+}
+#menu-ks .bg-color.transparent .link {
+  color: #000000;
+  transition: none;
+}
+#menu-ks .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#menu-ks .bg-color.transparent.opened .link:hover,
+#menu-ks .bg-color.transparent.opened .link:focus {
+  color: #000000;
+}
+#menu-ks .link[aria-expanded="true"],
+#menu-ks .dropdown-item[aria-expanded="true"] {
+  color: #efefef!important;
+}
+#features3-kt P {
+  color: #d14841;
+  font-size: 14px;
+  font-family: 'Droid Serif', serif;
+}
+#features3-kt H4 {
+  font-family: 'PT Serif', serif;
+  font-size: 17px;
+}
+#features3-kt DIV {
+  font-size: 16px;
+}
+#social-buttons2-kv .mbr-section-title,
+#social-buttons2-kv .btn-social {
+  color: #232323;
+}
+#social-buttons2-kv .btn-social > * {
+  vertical-align: middle;
+  padding-right: 0;
 }
