--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
+@import url(https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Droid+Sans:400,700);
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,300,700);
@@ -7,7 +9,6 @@
 @import url(https://fonts.googleapis.com/css?family=Lora:400,700);
 @import url(https://fonts.googleapis.com/css?family=Bitter:400,700);
 @import url(https://fonts.googleapis.com/css?family=Roboto+Slab:400,300,700);
-@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 @import url(https://fonts.googleapis.com/css?family=PT+Serif:400,400i,700,700i);
 @import url(https://fonts.googleapis.com/css?family=Merriweather:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700);
@@ -16,6 +17,8 @@
 @import url(https://fonts.googleapis.com/css?family=Arimo:400,700);
 @import url(https://fonts.googleapis.com/css?family=PT+Sans:400,700);
 @import url(https://fonts.googleapis.com/css?family=Noto+Sans:400,700);
+
+
 
 
 
@@ -483,6 +486,17 @@ section.form .container {
   display: flex;
   flex-wrap: wrap;
   margin: 0 -15px;
+}
+#msg-box1-ml H2 {
+  color: #d4b2b2;
+  text-align: center;
+  font-family: 'Montserrat', sans-serif;
+}
+#msg-box1-ml H3 {
+  font-size: 32px;
+  text-align: center;
+  color: #545050;
+  font-family: 'Roboto Condensed', sans-serif;
 }
 #image1-j5 P {
   font-family: 'Source Sans Pro', sans-serif;
@@ -4335,9 +4349,23 @@ section.form .container {
 
 
 
+
+
 #header3-m7 .mbr-section-title,
 #header3-m7 .mbr-section-subtitle {
   text-align: center;
+}
+#header3-mh .mbr-section-title,
+#header3-mh .mbr-section-subtitle {
+  text-align: center;
+}
+#header3-mh .mbr-section-title {
+  font-family: 'Droid Serif', serif;
+  font-size: 30px;
+}
+#header3-mh .mbr-section-subtitle {
+  font-family: 'Lora', serif;
+  font-size: 14px;
 }
 #content1-m9 P {
   text-align: center;
@@ -4362,7 +4390,7 @@ section.form .container {
 }
 #features3-mb H4 {
   font-family: 'PT Serif', serif;
-  font-size: 18px;
+  font-size: 16px;
 }
 #features3-mc P {
   color: #d14841;
@@ -4371,7 +4399,10 @@ section.form .container {
 }
 #features3-mc H4 {
   font-family: 'PT Serif', serif;
-  font-size: 18px;
+  font-size: 16px;
+}
+#features3-mc DIV {
+  font-size: 16px;
 }
 #menu-md .hide-buttons .nav-btn {
   display: none !important;
